# eigen_plugin_test

./: CMakeLists.txt  README.md  eigen_plugin.launch  nodelet_plugins.xml  package.xml
plugin1/: CMakeLists.txt  Nodelet1.cpp  Nodelet1.h
plugin2/: CMakeLists.txt  Nodelet2.cpp  Nodelet2.h
